# YTDAudio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  GITHUB_RELEASE_TEXT.md  INSTALLATION.md  Info.plist.in  LICENSE  README.md  REFACTORING_ANALYSIS.md  RELEASE_NOTES.md  USAGE.md  build.sh  build.txt  history_example.json  playlistcs.json  yt.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
git/: FILES_CREATED.txt  HOW_TO_RELEASE.md
json_out/: soundcloud_playlist.json  soundcloud_single.json  youtube_playlist.json  youtube_single.json
scripts/: download_dependencies.sh  download_ytdlp.sh
src/: app.cpp  app.h  downloader.cpp  downloader.h  main.cpp
src/common/: audio_utils.cpp  audio_utils.h  base64.h  browser_utils.cpp  browser_utils.h  history_utils.cpp  history_utils.h  json_utils.cpp  json_utils.h  logger.h  path_utils.cpp  path_utils.h  platform_macros.h  playlist_detector.cpp  playlist_detector.h  process_launcher.cpp  process_launcher.h  thumbnail_downloader.cpp  thumbnail_downloader.h  thumbnail_downloader_macos.mm  types.h  url_parser.cpp  url_parser.h  validation_utils.cpp  validation_utils.h  windows_utils.h
src/download/: download_manager.cpp  download_manager.h
src/events/: event_handler.cpp  event_handler.h
src/file/: file_manager.cpp  file_manager.h
src/history/: history_manager.cpp  history_manager.h
src/metadata/: metadata_manager.cpp  metadata_manager.h
src/platform/: path_finder.cpp  path_finder.h  platform_detector.cpp  platform_detector.h  platform_utils.cpp  platform_utils.h  platform_utils_macos.mm
src/service/: service_checker.cpp  service_checker.h
src/settings/: settings.cpp  settings.h
src/ui/: ui_renderer.cpp  ui_renderer.h
src/window/: window_manager.cpp  window_manager.h
